# mcp-filter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: mcp.json.sample  run.sh
src/mcp_filter/: __init__.py  cli.py  config.py  filter_server.py  health.py  logging.py  upstream.py
tests/: fake_upstream.py  test_call_forwarding.py  test_filter_list.py  test_transport_detection.py
