[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-filter"
version = "0.1.0"
description = "MCP server proxy that exposes a filtered tool surface from upstream servers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MCP Filter Contributors" }]
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "proxy", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.3.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
mcp-filter = "mcp_filter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_filter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "DTZ",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
